--- a/HTML/rooms.html
+++ b/HTML/rooms.html
@@ -12,7 +12,7 @@
   <!-- ملف التنسيق العام -->
 
   <!-- ملف التنسيق الخاص بالغرف -->
-  <link rel="stylesheet" href="../css/rooms.css">
+  <link rel="stylesheet" href="../CSS/rooms.css">
 </head>
 <body background-image>
    <div class="background-overlay"></div>
@@ -262,3 +262,4 @@
   
 </body>
 </html>
+
